nullaway_error_03e870e5-7151-4c35-9ae6-2d45ffa9392b.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/EurekaServerContextHolder.java:44: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return holder;
        ^
